feat: realizar e gerar simulações e parcelas e persistir no banco de dados.
